# argus

./: .argus.toml  .gitignore  CHANGELOG.md  CLAUDE.md  CODEBASE_TASKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  SPRINT-CONTROL  SPRINT-LOG.md  SPRINT-TEMPLATE.md  TODO.md  demo.tape
.argus/: index.db
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: argus-review.yml  ci.yml  release-plz.yml  release.yml
crates/argus-codelens/: CHANGELOG.md  Cargo.toml
crates/argus-codelens/src/: chunker.rs  embedding.rs  lib.rs  search.rs  store.rs
crates/argus-core/: CHANGELOG.md  Cargo.toml
crates/argus-core/src/: config.rs  error.rs  lib.rs  rules.rs  types.rs
crates/argus-difflens/: CHANGELOG.md  Cargo.toml
crates/argus-difflens/src/: filter.rs  lib.rs  parser.rs  risk.rs
crates/argus-difflens/tests/: parser_repro.rs
crates/argus-difflens/tests/fixtures/: quoted_paths.diff  simple.diff
crates/argus-gitpulse/: Cargo.toml
crates/argus-gitpulse/src/: coupling.rs  hotspots.rs  lib.rs  mining.rs  ownership.rs
crates/argus-mcp/: CHANGELOG.md  Cargo.toml
crates/argus-mcp/src/: lib.rs  server.rs  tools.rs
crates/argus-mcp/tests/: integration.rs
crates/argus-repomap/: CHANGELOG.md  Cargo.toml
crates/argus-repomap/src/: budget.rs  graph.rs  lib.rs  output.rs  parser.rs  walker.rs
crates/argus-repomap/tests/: integration.rs
crates/argus-review/: CHANGELOG.md  Cargo.toml
crates/argus-review/src/: feedback.rs  github.rs  lib.rs  llm.rs  patch.rs  pipeline.rs  prompt.rs  sarif.rs  state.rs
docs/plans/: 2026-02-15-repomap.md
npm/: README.md  install.js  package.json
src/: main.rs
tests/: fail_on.rs  init.rs
