[workspace]
resolver = "2"
members = [
    "crates/argus-core",
    "crates/argus-repomap",
    "crates/argus-difflens",
    "crates/argus-codelens",
    "crates/argus-gitpulse",
    "crates/argus-review",
    "crates/argus-mcp",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
argus-core = { path = "crates/argus-core" }
argus-repomap = { path = "crates/argus-repomap" }
argus-difflens = { path = "crates/argus-difflens" }
argus-codelens = { path = "crates/argus-codelens" }
argus-gitpulse = { path = "crates/argus-gitpulse" }
argus-review = { path = "crates/argus-review" }
argus-mcp = { path = "crates/argus-mcp" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
octocrab = "0.44"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
petgraph = "0.7"
ignore = "0.4"

[package]
name = "argus"
version.workspace = true
edition.workspace = true

[dependencies]
argus-core = { workspace = true }
argus-repomap = { workspace = true }
argus-difflens = { workspace = true }
argus-codelens = { workspace = true }
argus-gitpulse = { workspace = true }
argus-review = { workspace = true }
argus-mcp = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
