[workspace]
resolver = "2"
members = [
    "crates/argus-core",
    "crates/argus-repomap",
    "crates/argus-difflens",
    "crates/argus-codelens",
    "crates/argus-gitpulse",
    "crates/argus-review",
    "crates/argus-mcp",
]

[workspace.package]
edition = "2021"
version = "0.2.2"
license = "MIT"
description = "AI code review platform — your coding agent shouldn't grade its own homework"
repository = "https://github.com/Meru143/argus"
homepage = "https://github.com/Meru143/argus"
keywords = ["code-review", "ai", "llm", "cli", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[workspace.metadata.dist]
cargo-dist-version = "0.27"
ci = "github"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[workspace.dependencies]
argus-core = { path = "crates/argus-core", version = "0.2.1" }
argus-repomap = { path = "crates/argus-repomap", version = "0.2.1" }
argus-difflens = { path = "crates/argus-difflens", version = "0.2.1" }
argus-codelens = { path = "crates/argus-codelens", version = "0.2.1" }
argus-gitpulse = { path = "crates/argus-gitpulse", version = "0.2.1" }
argus-review = { path = "crates/argus-review", version = "0.2.1" }
argus-mcp = { path = "crates/argus-mcp", version = "0.2.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
octocrab = "0.44"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
git2 = { version = "0.19", default-features = false }
petgraph = "0.7"
ignore = "0.4"
glob = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sha2 = "0.10"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
miette = { version = "7", features = ["fancy"] }
human-panic = "2"
indicatif = "0.17"

[package]
name = "argus-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
argus-core = { workspace = true }
argus-repomap = { workspace = true }
argus-difflens = { workspace = true }
argus-codelens = { workspace = true }
argus-gitpulse = { workspace = true }
argus-review = { workspace = true }
argus-mcp = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
miette = { workspace = true }
human-panic = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
argus-core = { workspace = true }
