[package]
name = "argus-codelens"
version.workspace = true
edition.workspace = true

[dependencies]
argus-core = { workspace = true }
argus-repomap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tree-sitter = { workspace = true }

[dev-dependencies]
tempfile = "3"
