[package]
name = "argus-codelens"
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Meru Patel <meru143@gmail.com>"]
description.workspace = true

edition.workspace = true

[dependencies]
argus-core = { workspace = true }
argus-repomap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tree-sitter = { workspace = true }

[dev-dependencies]
tempfile = "3"
