[package]
name = "argus-gitpulse"
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Meru Patel <meru143@gmail.com>"]
description.workspace = true

edition.workspace = true

[dependencies]
argus-core = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
