[package]
name = "argus-mcp"
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Meru Patel <meru143@gmail.com>"]
description.workspace = true

edition.workspace = true

[dependencies]
argus-core = { workspace = true }
argus-difflens = { workspace = true }
argus-repomap = { workspace = true }
argus-codelens = { workspace = true }
argus-gitpulse = { workspace = true }
argus-review = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
