[package]
name = "argus-repomap"
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Meru Patel <meru143@gmail.com>"]
description.workspace = true

edition.workspace = true

[dependencies]
argus-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-ruby = { workspace = true }
petgraph = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
