[package]
name = "argus-review"
version.workspace = true
edition.workspace = true

[dependencies]
argus-core = { workspace = true }
argus-repomap = { workspace = true }
argus-difflens = { workspace = true }
argus-codelens = { workspace = true }
argus-gitpulse = { workspace = true }
reqwest = { workspace = true }
octocrab = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
