[package]
name = "argus-review"
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Meru Patel <meru143@gmail.com>"]
description.workspace = true

edition.workspace = true

[dependencies]
argus-core = { workspace = true }
argus-repomap = { workspace = true }
argus-difflens = { workspace = true }
argus-codelens = { workspace = true }
argus-gitpulse = { workspace = true }
reqwest = { workspace = true }
octocrab = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
